--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "author": "Adam Neumann",
     "license": "ISC",
     "dependencies": {
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "fit-decoder": "^1.0.5",
+        "luxon": "^1.28.0"
     },
     "devDependencies": {
         "@types/express": "^4.17.1",
+        "@types/luxon": "^1.27.1",
+        "axios": "^0.21.1",
         "nodemon": "^2.0.4",
         "parcel-bundler": "^1.12.5",
         "react": "^17.0.2",
