--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "parcel-bundler": "^1.12.5",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-router-dom": "^5.2.0",
         "ts-node": "^10.1.0",
         "typescript": "^4.3.5"
     }
