--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     },
     "devDependencies": {
         "@types/express": "^4.17.1",
+        "@types/leaflet": "^1.7.4",
         "@types/luxon": "^1.27.1",
         "axios": "^0.21.1",
+        "leaflet": "^1.7.1",
         "nodemon": "^2.0.4",
         "parcel-bundler": "^1.12.5",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-leaflet": "^3.2.0",
         "react-router-dom": "^5.2.0",
         "ts-node": "^10.1.0",
         "typescript": "^4.3.5"
