--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@types/express": "^4.17.1",
         "@types/leaflet": "^1.7.4",
         "@types/luxon": "^1.27.1",
+        "@types/react-vis": "^1.11.7",
         "axios": "^0.21.1",
         "leaflet": "^1.7.1",
         "nodemon": "^2.0.4",
@@ -31,6 +32,7 @@
         "react-dom": "^17.0.2",
         "react-leaflet": "^3.2.0",
         "react-router-dom": "^5.2.0",
+        "react-vis": "^1.11.7",
         "ts-node": "^10.1.0",
         "typescript": "^4.3.5"
     }
