--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "dependencies": {
         "express": "^4.17.1",
         "fit-decoder": "^1.0.5",
-        "luxon": "^1.28.0"
+        "luxon": "^1.28.0",
+        "zebras": "^0.0.19"
     },
     "devDependencies": {
         "@types/express": "^4.17.1",
