Use Milligram CSS framework for styles

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@types/react-vis": "^1.11.7",
         "axios": "^0.21.1",
         "leaflet": "^1.7.1",
+        "milligram": "^1.4.1",
         "nodemon": "^2.0.4",
         "parcel-bundler": "^1.12.5",
         "react": "^17.0.2",
