--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
         "zebras": "^0.0.19"
     },
     "devDependencies": {
+        "@nivo/bar": "^0.73.1",
+        "@nivo/core": "^0.73.0",
+        "@nivo/line": "^0.73.0",
         "@types/express": "^4.17.1",
         "@types/leaflet": "^1.7.4",
         "@types/luxon": "^1.27.1",
