--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "build:frontend": "parcel build --no-minify -d dist/frontend src/frontend/index.html",
         "start": "node dist/backend/index.js",
         "dev:backend": "nodemon -e ts --exec \"ts-node src/backend/index.ts\"",
-        "dev:frontend": "parcel watch -d dist/frontend src/frontend/index.html"
+        "dev:frontend": "parcel watch -d dist/frontend src/frontend/index.html",
+        "test:backend": "jest --rootDir test/backend"
     },
     "author": "Adam Neumann",
     "license": "ISC",
@@ -25,9 +26,11 @@
         "@nivo/core": "^0.73.0",
         "@nivo/line": "^0.73.0",
         "@types/express": "^4.17.1",
+        "@types/jest": "^26.0.24",
         "@types/leaflet": "^1.7.4",
         "@types/luxon": "^1.27.1",
         "axios": "^0.21.1",
+        "jest": "^26.0.24",
         "leaflet": "^1.7.1",
         "milligram": "^1.4.1",
         "nodemon": "^2.0.4",
@@ -36,6 +39,7 @@
         "react-dom": "^17.0.2",
         "react-leaflet": "^3.2.0",
         "react-router-dom": "^5.2.0",
+        "ts-jest": "^26.0.24",
         "ts-node": "^10.1.0",
         "typescript": "^4.3.5"
     }
