--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
         "@types/jest": "^26.0.24",
         "@types/leaflet": "^1.7.4",
         "@types/luxon": "^1.27.1",
+        "@types/parcel-env": "^0.0.1",
+        "@types/react": "^17.0.2",
+        "@types/react-dom": "^17.0.2",
+        "@types/react-router-dom": "^5.1.8",
         "axios": "^0.21.1",
         "jest": "^26.0.24",
         "leaflet": "^1.7.1",
@@ -39,7 +43,7 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-leaflet": "^3.2.0",
-        "react-router-dom": "^5.2.0",
+        "react-router-dom": "^5.1.8",
         "ts-jest": "^26.0.24",
         "ts-node": "^10.1.0",
         "typescript": "^4.3.5"
