--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "target": "es6",
     "moduleResolution": "node",
     "sourceMap": true,
-    "outDir": "dist/backend"
+    "outDir": "dist/backend",
+    "jsx": "react"
   },
   "include": [
     "src/backend/**/*"
